fix: Improve BG object alignment on mobile

--- a/dreamfight/src/styles/global.css
+++ b/dreamfight/src/styles/global.css
@@ -23,11 +23,7 @@
 
     font-family: 'League Gothic';
     @apply lg:text-8xl md:text-7xl text-6xl text-white;
-    /* font-style: normal; */
-    /* font-weight: 400; */
-    /* font-size: 120px; */
     line-height: 130%;
-    /* letter-spacing: -0.02em; */
   }
 
   .content {
@@ -64,7 +60,6 @@
 
 .intro-section {
   padding: 0 36px;
-  width: 50%;
 }
 
 .signup-section {
@@ -87,11 +82,14 @@
   background-repeat: no-repeat;
   background-size: contain;
 
+  max-width: 1280px;
+  margin: 0 auto;
+
   position: absolute;
   top: 0;
-  bottom:0;
-  left:0;
-  right:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: -1;
 }
 
@@ -177,14 +175,15 @@
   }
 
   .logo {
-    margin: 54px auto 280px;
+    margin: 54px auto 0;
     width: 50%;
   }
 
   /* Sections */
 
   .intro-section {
-    width: 100%;
+    /* height is based on aspect ratio of bg.webp */
+    height: calc(100vh * (896 / 1728));
   }
 
   .signup-section {
@@ -213,21 +212,21 @@
   /* Background */
 
   .background {
+    height: calc(100vh * (896/1728));
+    box-shadow: inset 0 0 300px #000;
     background-size: cover;
-    background-position-y: 100px;
-    height: 50%;
   }
 
   .background-container {
-    max-height: 420px;
     overflow: hidden;
   }
 
   .background-tennis-player {
-    left: -20%;
+    left: -15%;
     transform: rotateY(180deg);
     width: 350px;
-    top: 120px;
+    top: 154px;
+    z-index: -1;
   }
 
   .background-life-bar {
